[project]
name = "questions-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "fastapi>=0.134.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email,emailstr]>=2.12.5",
    "sqlalchemy>=2.0.47",
    "uvicorn[standart]>=0.41.0",
]
